enquiry-handler-#15: Reorganise packages and remove dependency on clubbed-modules